--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,15 @@
 @import "normalizez.scss"
 @import "resets.scss"
 
+*
+    box-sizing: border-box
+
+$color-blue: #5290EA
+$color-orange: #F28B64
+$color-gray: #E2E2E2
+
+
+
 .container
     max-width: 1140px
     margin: 0 auto
@@ -25,5 +34,39 @@
         gap: 64px
     &__list-item
         font-size: 18px
-
-
+.left-wrapper
+    position: relative
+    img
+        position: relative
+        z-index: 1
+    &__rectangle-blue
+        position: absolute
+        width: 565.95px
+        height: 220px
+        background-color: $color-blue
+        border-radius: 100px
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        top: 150px
+        left: -50px
+        transform: rotate(-64deg)
+        z-index: 
+    &__rectangle-orange
+        position: absolute
+        width: 618.43px
+        height: 220px
+        background-color: $color-orange
+        border-radius: 100px
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        top: 150px
+        left: -50px
+        transform: rotate(-50.81deg)
+    &__rectangle-gray
+        position: absolute
+        width: 608.97px
+        height: 220px
+        background-color: $color-gray
+        border-radius: 100px
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
+        top: 150px
+        left: -50px
+        transform: rotate(-36.15deg)
