--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -38,7 +38,13 @@ $color-gray: #E2E2E2
     position: relative
     img
         position: relative
-        z-index: 1
+        z-index: 5
+        transform: scale(1)
+        transition: 1s
+    img:hover
+        transform: scale(1.02)
+        transition: 1s
+        
     &__rectangle-blue
         position: absolute
         width: 565.95px
@@ -49,7 +55,7 @@ $color-gray: #E2E2E2
         top: 150px
         left: -50px
         transform: rotate(-64deg)
-        z-index: 
+        z-index: 2
     &__rectangle-orange
         position: absolute
         width: 618.43px
@@ -57,9 +63,10 @@ $color-gray: #E2E2E2
         background-color: $color-orange
         border-radius: 100px
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-        top: 150px
-        left: -50px
+        top: 160px
+        left: -30px
         transform: rotate(-50.81deg)
+        z-index: 3
     &__rectangle-gray
         position: absolute
         width: 608.97px
@@ -67,6 +74,7 @@ $color-gray: #E2E2E2
         background-color: $color-gray
         border-radius: 100px
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
-        top: 150px
-        left: -50px
+        top: 190px
+        left: 10px
         transform: rotate(-36.15deg)
+        z-index: 1
