--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -33,8 +33,8 @@ $color-black: #000000
         flex-direction: row
     &__first-elipse
         position: absolute
-        top: 129px
-        right: 34px
+        top: 137px
+        right: 65px
     &__second-elipse
         position: absolute
         right: -120px
@@ -44,8 +44,16 @@ $color-black: #000000
         display: flex
         flex-direction: row
         gap: 64px
+        list-style-type: none
     &__list-item
         font-size: 18px
+    &__link
+        text-decoration: none
+        color: #000000
+    &__link:hover
+        text-decoration: none
+        color: $color-blue
+
 .left-wrapper
     position: relative
     img
@@ -113,6 +121,10 @@ $color-black: #000000
     &__item
         width: 40px
         height: 40px
+        cursor: pointer
+    &__item:hover
+        width: 41px
+        height: 41px
         
 .title
     font-size: 72px
@@ -137,6 +149,10 @@ $color-black: #000000
         color: white
         font-family: 'Montserrat'
         font-size: 18px
+        cursor: pointer
+    &__main-btn:hover
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50)
+        background-color: $color-blue
     &__icon-btn
         display: inline-flex
         align-items: center
@@ -167,3 +183,70 @@ $color-black: #000000
         &--big
             width: 188px
             height: 188px
+        &--white
+            background-color: #ffffff
+.second-section
+
+    min-height: 700px
+    &__container
+        padding-top: 32px
+        position: relative
+    &__title
+        margin-bottom: 40px
+    &__card-box
+        display: inline-flex
+        gap: 30px
+        margin-bottom: 25px
+    &__icons-box
+        display: flex
+        justify-content: space-evenly
+    &__first-elipse
+        position: absolute
+        top: 80px
+        right: -60px
+        z-index: -1
+    &__second-elipse
+        position: absolute
+        top: 364px
+        left: -60px
+        z-index: -1
+
+.card-item
+    width: 360px
+    height: 360px
+    background: #E2E2E2
+    border-radius: 10px
+    display: flex
+    align-items: flex-end
+    position: relative
+    &__img
+        height: 335px
+        &:hover
+            height: 340px
+    &__text
+        width: 280px
+        font-size: 36px
+        text-align: center
+        transform: rotate(90deg)
+        position: absolute
+        top: 134px
+        right: -47px
+.card-item--blue
+    background-color: $color-blue
+.card-item--orange   
+    background-color: $color-orange
+.icons-item
+    display: inline-flex
+    align-items: center
+    &__img
+        margin-right: 20px
+        width: 80px
+        &:hover
+            width: 83px
+    &__text
+        font-size: 18px
+        span
+            font-size: 48px
+            
+
+    
