--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,7 @@ $color-gray: #E2E2E2
 $color-black: #000000
 
 .container
+    position: relative
     max-width: 1140px
     margin: 0 auto
 
@@ -50,20 +51,19 @@ $color-black: #000000
     &__link
         text-decoration: none
         color: #000000
-    &__link:hover
-        text-decoration: none
-        color: $color-blue
+        &:hover
+            color: $color-blue
 
 .left-wrapper
     position: relative
-    img
+    &__img
         position: relative
         z-index: 5
         transform: scale(1)
         transition: 1s
-    img:hover
-        transform: scale(1.02)
-        transition: 1s
+        &:hover
+            transform: scale(1.02)
+            transition: 1s
 
     &__rectangle-blue
         position: absolute
@@ -122,9 +122,9 @@ $color-black: #000000
         width: 40px
         height: 40px
         cursor: pointer
-    &__item:hover
-        width: 41px
-        height: 41px
+        &:hover
+            transform: scale(1.02)
+            transition: 1s
         
 .title
     font-size: 72px
@@ -150,9 +150,11 @@ $color-black: #000000
         font-family: 'Montserrat'
         font-size: 18px
         cursor: pointer
-    &__main-btn:hover
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50)
-        background-color: $color-blue
+        &:hover
+            transform: scale(1.02)
+            transition: 1s
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50)
+            background-color: $color-blue
     &__icon-btn
         display: inline-flex
         align-items: center
@@ -186,7 +188,6 @@ $color-black: #000000
         &--white
             background-color: #ffffff
 .second-section
-
     min-height: 700px
     &__container
         padding-top: 32px
@@ -219,10 +220,13 @@ $color-black: #000000
     display: flex
     align-items: flex-end
     position: relative
+    &:hover
+        transform: scale(1.02)
+        transition: 2s
     &__img
         height: 335px
         &:hover
-            height: 340px
+            height: 336px
     &__text
         width: 280px
         font-size: 36px
@@ -242,11 +246,52 @@ $color-black: #000000
         margin-right: 20px
         width: 80px
         &:hover
-            width: 83px
+            transform: scale(1.02)
+            transition: 1s
     &__text
         font-size: 18px
         span
             font-size: 48px
             
 
-    
+.third-section
+    position: relative
+    min-width: 640px
+    background: $color-gray
+    z-index: 0
+    overflow: hidden
+    &__container
+        display: flex
+        flex-direction: row
+        align-items: center
+        justify-content: space-between
+        padding-left: 167px
+        padding-top: 46px
+        padding-bottom: 46px
+    &__right-wraper
+        max-width: 480px
+        border-left: 1px solid #000000 
+        padding-left: 20px
+    &__title
+        margin-bottom: 20px
+    &__text
+        font-size: 18px
+        margin-bottom: 30px
+    &__first-elipse
+        position: absolute
+        top: 105px
+        left: 94px
+        z-index: -1
+    &__second-elipse
+        position: absolute
+        top: -119px
+        right: -161px
+
+    &__figure
+        position: absolute
+        top: 186px
+        left: 5px
+        z-index: -1
+.title__hr--top
+    bottom: 75px
+
