Готовая верстка проекта Guitar-school

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -294,4 +294,17 @@ $color-black: #000000
         z-index: -1
 .title__hr--top
     bottom: 75px
+.footer
+    &__img
+        position: absolute
+        left: -80px
+        bottom: 0
+    &__container
+        min-height: 272px
+        align-items: center
+        display: flex
+        justify-content: flex-end
+    &__title
+        margin-bottom: 20px
+
 
