--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,6 +4,22 @@
 *
     box-sizing: border-box
 
+@font-face 
+    font-family: "MontserratT"
+    src: url('../fonts/Montserrat-Regular.ttf')
+    font-weight: regular
+    font-style: normal
+
+@font-face 
+    font-family: "MontserratT"
+    src: url('../fonts/Montserrat-SemiBold.ttf')
+    font-weight: bold
+    font-style: normal
+
+html
+    font-family: "MontserratT"
+    font-weight: regular
+
 $color-blue: #5290EA
 $color-orange: #F28B64
 $color-gray: #E2E2E2
@@ -48,6 +64,7 @@ $color-black: #000000
         list-style-type: none
     &__list-item
         font-size: 18px
+        font-weight: bold
     &__link
         text-decoration: none
         color: #000000
@@ -129,6 +146,7 @@ $color-black: #000000
 .title
     font-size: 72px
     position: relative
+    font-weight: bold
     &__hr
         width: 65px
         position: absolute
@@ -150,6 +168,7 @@ $color-black: #000000
         font-family: 'Montserrat'
         font-size: 18px
         cursor: pointer
+        font-weight: bold
         &:hover
             transform: scale(1.02)
             transition: 1s
@@ -235,6 +254,7 @@ $color-black: #000000
         position: absolute
         top: 134px
         right: -47px
+        font-weight: bold
 .card-item--blue
     background-color: $color-blue
 .card-item--orange   
@@ -252,7 +272,7 @@ $color-black: #000000
         font-size: 18px
         span
             font-size: 48px
-            
+            font-weight: bold
 
 .third-section
     position: relative
