--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -390,7 +390,7 @@ $color-orange: #F28B64
         &__rectangle-orange 
             width: 410px
             height: 130px
-        .left-wrapper__rectangle-grey 
+        &__rectangle-grey 
             width: 380px
             height: 130px
     .title
@@ -486,13 +486,33 @@ $color-orange: #F28B64
     .container
         width: 540px
     .nav-menu
-        display: none
+        position: absolute
+        top: 0
+        right: -100%
+        width: 50%
+        height: 100vh
+        background: #80aff5
+        z-index: 20
+        transition: 0.6s all
+        &__list
+            flex-direction: column
+            justify-content: space-evenly
+            align-items: center
+            height: 100%
+            a
+                color: #F0F0F0
+            
+        &__list-item
+            margin-right: 0
+            font-size: 20px
+
     .hamburger
         width: 30px
         height: 14px
         position: absolute
-        top: 40px
+        top: 27px
         right: 30px
+        z-index: 30
         span
             height: 2px
             width: 100%
@@ -504,6 +524,7 @@ $color-orange: #F28B64
                 margin-bottom: 0
     .hamburger_active
         span
+            background: #F28B64
             margin-bottom: -2px
             &:nth-child(1)
                 transform: translateY(3px) rotate(-45deg)
@@ -511,9 +532,207 @@ $color-orange: #F28B64
                 display: none
             &:nth-child(3)
                 transform: translateY(3px) rotate(45deg)
-                
+    .nav-menu_active
+        right: 0px
+    .main-section
+        padding-top: 0px
+        min-height: 400px
+        &__logo
+            height: 50px
+        &__first-elipse
+            right: 41px
+            top: -16px
+        &__second-elipse
+            top: 267px
+    .left-wrapper 
+        img 
+            width: 423px
+    .left-wrapper
+        &__rectangle-blue 
+            width: 345px
+            height: 116px
+            top: 77px
+            left: -61px
+        &__rectangle-orange 
+            width: 350px
+            height: 120px
+            left: -39px
+            top: 88px
+        &__rectangle-grey 
+            width: 345px
+            height: 116px
+            left: -18px
+            top: 113px
+    .title 
+        font-size: 24px
+        &__hr_top
+            bottom: 52px
+    .icons
+        &__item
+            width: 30px
+            height: 30px
+            i
+                font-size: 18px
+    .buttons
+        &__main-btn 
+            font-size: 12px
+            margin-right: 10px
+            width: 136px
+            height: 43px
+        &__icon-btn 
+            img
+                height: 40px
+    .right-wrapper
+        right: 46px
+        top: 17px
+        width: 169px
+        &__icons-box
+            padding-left: 0
+
+    .buttons 
+        display: flex
+        flex-direction: column-reverse
+        gap: 10px
+    .second-section
+        min-height: 335px
+        &__title
+            margin-left: 25px
+            margin-bottom: 15px
+        &__first-elipse
+            right: 0px
+            top: 21px
+        &__second-elipse
+            top: 159px
+            left: 0px
+    .cards-item
+        width: 151px
+        height: 189px
+        margin-right: 15px
+        &__img
+            height: 169px
+        &__text
+            font-size: 20px
+            top: 72px
+            right: -110px
+    .icons-item
+        &__img
+            width: 34px
+        &__text
+            font-size: 12px
+            span
+                font-size: 20px
+    .third-section
+        min-height: 403px
+        &__text
+            font-size: 15px
+            margin-bottom: 30px
+        &__figure
+            top: 50px
+            left: 226px
+        &__first-elipse 
+            top: 147px
+            left: 104px
+        .buttons
+            flex-direction: row
+    .footer
+        &__img 
+            left: 0px
+            width: 299px
+        &__container
+            min-height: 121px
+        &__wrapper
+            margin-right: 30px
 
 
 @media (max-width: 575px)
     .container
         width: 100%
+    .main-section
+        height: 515px
+        &__logo
+            margin-left: 20px
+            height: 45px
+        &__first-elipse
+            display: none
+    .hamburger
+        top: 21px
+        right: 22px
+    .nav-menu
+        width: 70%
+    .right-wrapper
+        left: 10%
+        top: 3px
+        width: 267px
+
+    .left-wrapper
+        margin: 0 auto
+        margin-top: 170px
+        img
+            width: 345px
+        &__rectangle-blue
+            display: none
+        &__rectangle-orange
+            display: none
+        &__rectangle-grey
+            display: none
+    .second-section
+        &__icons-box
+            display: grid
+            grid-template-columns: 1fr 1fr
+            grid-template-rows: 1fr 1fr
+            gap-column: 20px
+            padding: 20px
+        &__cards-box
+            display: flex
+            flex-direction: column
+        .cards-item
+            margin: auto
+            transform: rotate(-90deg)
+            width: 186px
+            height: 232px
+            &__text
+                font-size: 20px
+                top: 96px
+                right: -96px
+            &__img
+                height: 192px
+    .icons-item
+        display: inline-flex
+        align-items: start
+        justify-content: center
+        flex-direction: column
+        gap: 10px
+        &__img 
+            margin-left: 20%
+            width: 100px
+        &__text
+            margin-left: 20%
+            font-size: 16px
+            margin-bottom: 15%
+            span
+                font-size: 35px
+    .right-wrapper
+        &__icons-box
+            margin-bottom: 10px
+    .elipse_dig
+        display: none
+    .third-section
+        height: auto
+        &__text
+            width: 90%
+            margin-bottom: 15px
+        &__container
+            padding: 15px
+        &__figure
+            display: none
+    .buttons
+        justify-content: center
+        &__icon-btn
+            display: none
+    .footer
+        &__img
+            display: none
+        &__container
+            min-height: 147px
+            justify-content: center
+
